ags (3.6.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags-fx-envelope to query ags-fx-pattern and ags-fx-notation for offset
	* improved ags-fx-envelope to query AgsAudio for pattern mode
	* implemented missing functions of AgsTrack
	* implemented additional getter/setter
	* added unit-tests
	* minor improvements

ags (3.6.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_message_delivery_query_message() accessing GList as instance
	* fixed ags_task_launcher_remove_cyclic_task() wrong parameter to g_list_find() within if condition
	* implemented additional getter/setter
	* added unit-tests
	* minor improvements

ags (3.6.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented property and getter/setter of AgsRuler font-size
	* fixed gui-scale factor applied to AgsRuler
	* refactored gui-scale factor read from ags_ui_provider_get_gui_scale_factor() instead from AgsConfig

ags (3.6.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_playback_dispose()
	* disabled parallel server tests
	* minor improvements

ags (3.6.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed automake

ags (3.6.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented concurrent running tests using gnu parallel

ags (3.6.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added 10 functional integration XML file setup test

ags (3.6.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory corruption in Ags*DssiBridge and Ags*Lv2Bridge

ags (3.6.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented lock-free ags-fx-playback
	* fixed missing call to ags_soundcard_lock() and ags_soundcard_unlock() in ags_devout.c
	* fixed reallocation of AgsAudioSignal stream data while setting samplerate, buffer size and format
	* improved midi2xml_main.c to check valid file stream pointer
